support for LLMs, better sidebars etc

--- a/frontend/src/i18n/translation.json
+++ b/frontend/src/i18n/translation.json
@@ -1679,6 +1679,54 @@
         "de": "Änderungen speichern",
         "uk": "Зберегти зміни"
     },
+    "SETTINGS$TEST_LLM": {
+        "en": "Test",
+        "ja": "テスト",
+        "zh-CN": "测试",
+        "zh-TW": "測試",
+        "ko-KR": "테스트",
+        "no": "Test",
+        "it": "Test",
+        "pt": "Testar",
+        "es": "Probar",
+        "ar": "اختبار",
+        "fr": "Tester",
+        "tr": "Test",
+        "de": "Testen",
+        "uk": "Тест"
+    },
+    "SETTINGS$TESTING": {
+        "en": "Testing...",
+        "ja": "テスト中...",
+        "zh-CN": "测试中...",
+        "zh-TW": "測試中...",
+        "ko-KR": "테스트 중...",
+        "no": "Tester...",
+        "it": "Test in corso...",
+        "pt": "Testando...",
+        "es": "Probando...",
+        "ar": "جاري الاختبار...",
+        "fr": "Test en cours...",
+        "tr": "Test ediliyor...",
+        "de": "Teste...",
+        "uk": "Тестування..."
+    },
+    "SETTINGS$LLM_TEST_SUCCESS": {
+        "en": "LLM configuration is valid",
+        "ja": "LLM設定は有効です",
+        "zh-CN": "LLM配置有效",
+        "zh-TW": "LLM設定有效",
+        "ko-KR": "LLM 구성이 유효합니다",
+        "no": "LLM-konfigurasjonen er gyldig",
+        "it": "La configurazione LLM è valida",
+        "pt": "Configuração LLM é válida",
+        "es": "La configuración LLM es válida",
+        "ar": "تكوين LLM صالح",
+        "fr": "La configuration LLM est valide",
+        "tr": "LLM yapılandırması geçerli",
+        "de": "LLM-Konfiguration ist gültig",
+        "uk": "Конфігурація LLM дійсна"
+    },
     "SETTINGS$NAV_INTEGRATIONS": {
         "en": "Integrations",
         "ja": "統合",
@@ -6670,6 +6718,70 @@
         "fr": "Conversations",
         "tr": "Konuşmalar",
         "uk": "Розмови"
+    },
+    "NO_CONVERSATIONS": {
+        "en": "No conversations found",
+        "ja": "会話が見つかりません",
+        "zh-CN": "未找到对话",
+        "zh-TW": "未找到對話",
+        "ko-KR": "대화를 찾을 수 없습니다",
+        "de": "Keine Gespräche gefunden",
+        "no": "Ingen samtaler funnet",
+        "it": "Nessuna conversazione trovata",
+        "pt": "Nenhuma conversa encontrada",
+        "es": "No se encontraron conversaciones",
+        "ar": "لم يتم العثور على محادثات",
+        "fr": "Aucune conversation trouvée",
+        "tr": "Konuşma bulunamadı",
+        "uk": "Розмови не знайдені"
+    },
+    "START_NEW_CONVERSATION": {
+        "en": "Start New Conversation",
+        "ja": "新しい会話を開始",
+        "zh-CN": "开始新对话",
+        "zh-TW": "開始新對話",
+        "ko-KR": "새 대화 시작",
+        "de": "Neues Gespräch starten",
+        "no": "Start ny samtale",
+        "it": "Inizia nuova conversazione",
+        "pt": "Iniciar nova conversa",
+        "es": "Iniciar nueva conversación",
+        "ar": "بدء محادثة جديدة",
+        "fr": "Démarrer une nouvelle conversation",
+        "tr": "Yeni Konuşma Başlat",
+        "uk": "Почати нову розмову"
+    },
+    "PERSONAL_CONVERSATIONS": {
+        "en": "Personal Conversations",
+        "ja": "個人の会話",
+        "zh-CN": "个人对话",
+        "zh-TW": "個人對話",
+        "ko-KR": "개인 대화",
+        "de": "Persönliche Gespräche",
+        "no": "Personlige samtaler",
+        "it": "Conversazioni personali",
+        "pt": "Conversas pessoais",
+        "es": "Conversaciones personales",
+        "ar": "المحادثات الشخصية",
+        "fr": "Conversations personnelles",
+        "tr": "Kişisel Konuşmalar",
+        "uk": "Особисті розмови"
+    },
+    "TEAM_CONVERSATIONS": {
+        "en": "Team Conversations",
+        "ja": "チームの会話",
+        "zh-CN": "团队对话",
+        "zh-TW": "團隊對話",
+        "ko-KR": "팀 대화",
+        "de": "Team-Gespräche",
+        "no": "Teamsamtaler",
+        "it": "Conversazioni del team",
+        "pt": "Conversas da equipe",
+        "es": "Conversaciones del equipo",
+        "ar": "محادثات الفريق",
+        "fr": "Conversations d'équipe",
+        "tr": "Takım Konuşmaları",
+        "uk": "Командні розмови"
     },
     "STATUS$CONNECTING_TO_RUNTIME": {
         "en": "Connecting to runtime...",
