feat: implement multi-LLM configuration system with encrypted API key storage

--- a/frontend/src/i18n/translation.json
+++ b/frontend/src/i18n/translation.json
@@ -6575,6 +6575,422 @@
         "es": "Mi clave API",
         "tr": "API Anahtarım"
     },
+    "SETTINGS$MANAGE_CONFIGURATIONS": {
+        "en": "Manage Configurations",
+        "uk": "Керування конфігураціями",
+        "ja": "設定の管理",
+        "zh-CN": "管理配置",
+        "zh-TW": "管理配置",
+        "ko-KR": "구성 관리",
+        "no": "Administrer konfigurasjoner",
+        "ar": "إدارة التكوينات",
+        "de": "Konfigurationen verwalten",
+        "fr": "Gérer les configurations",
+        "it": "Gestisci configurazioni",
+        "pt": "Gerenciar configurações",
+        "es": "Gestionar configuraciones",
+        "tr": "Yapılandırmaları Yönet"
+    },
+    "SETTINGS$ADD_LLM_CONFIGURATION": {
+        "en": "Add LLM Configuration",
+        "uk": "Додати конфігурацію LLM",
+        "ja": "LLM設定を追加",
+        "zh-CN": "添加LLM配置",
+        "zh-TW": "添加LLM配置",
+        "ko-KR": "LLM 구성 추가",
+        "no": "Legg til LLM-konfigurasjon",
+        "ar": "إضافة تكوين LLM",
+        "de": "LLM-Konfiguration hinzufügen",
+        "fr": "Ajouter une configuration LLM",
+        "it": "Aggiungi configurazione LLM",
+        "pt": "Adicionar configuração LLM",
+        "es": "Añadir configuración LLM",
+        "tr": "LLM Yapılandırması Ekle"
+    },
+    "SETTINGS$EDIT_LLM_CONFIGURATION": {
+        "en": "Edit LLM Configuration",
+        "uk": "Редагувати конфігурацію LLM",
+        "ja": "LLM設定を編集",
+        "zh-CN": "编辑LLM配置",
+        "zh-TW": "編輯LLM配置",
+        "ko-KR": "LLM 구성 편집",
+        "no": "Rediger LLM-konfigurasjon",
+        "ar": "تحرير تكوين LLM",
+        "de": "LLM-Konfiguration bearbeiten",
+        "fr": "Modifier la configuration LLM",
+        "it": "Modifica configurazione LLM",
+        "pt": "Editar configuração LLM",
+        "es": "Editar configuración LLM",
+        "tr": "LLM Yapılandırmasını Düzenle"
+    },
+    "SETTINGS$LLM_CONFIGURATION_CREATED": {
+        "en": "Configuration created successfully",
+        "uk": "Конфігурацію створено успішно",
+        "ja": "設定が正常に作成されました",
+        "zh-CN": "配置创建成功",
+        "zh-TW": "配置創建成功",
+        "ko-KR": "구성이 성공적으로 생성되었습니다",
+        "no": "Konfigurasjon opprettet",
+        "ar": "تم إنشاء التكوين بنجاح",
+        "de": "Konfiguration erfolgreich erstellt",
+        "fr": "Configuration créée avec succès",
+        "it": "Configurazione creata con successo",
+        "pt": "Configuração criada com sucesso",
+        "es": "Configuración creada con éxito",
+        "tr": "Yapılandırma başarıyla oluşturuldu"
+    },
+    "SETTINGS$LLM_CONFIGURATION_UPDATED": {
+        "en": "Configuration updated successfully",
+        "uk": "Конфігурацію оновлено успішно",
+        "ja": "設定が正常に更新されました",
+        "zh-CN": "配置更新成功",
+        "zh-TW": "配置更新成功",
+        "ko-KR": "구성이 성공적으로 업데이트되었습니다",
+        "no": "Konfigurasjon oppdatert",
+        "ar": "تم تحديث التكوين بنجاح",
+        "de": "Konfiguration erfolgreich aktualisiert",
+        "fr": "Configuration mise à jour avec succès",
+        "it": "Configurazione aggiornata con successo",
+        "pt": "Configuração atualizada com sucesso",
+        "es": "Configuración actualizada con éxito",
+        "tr": "Yapılandırma başarıyla güncellendi"
+    },
+    "SETTINGS$CONFIGURATION_NAME": {
+        "en": "Configuration Name",
+        "uk": "Назва конфігурації",
+        "ja": "設定名",
+        "zh-CN": "配置名称",
+        "zh-TW": "配置名稱",
+        "ko-KR": "구성 이름",
+        "no": "Konfigurasjonsnavn",
+        "ar": "اسم التكوين",
+        "de": "Konfigurationsname",
+        "fr": "Nom de la configuration",
+        "it": "Nome configurazione",
+        "pt": "Nome da configuração",
+        "es": "Nombre de configuración",
+        "tr": "Yapılandırma Adı"
+    },
+    "SETTINGS$CONFIGURATION_NAME_PLACEHOLDER": {
+        "en": "e.g., My GPT-4 Key",
+        "uk": "наприклад, Мій ключ GPT-4",
+        "ja": "例: 私のGPT-4キー",
+        "zh-CN": "例如：我的GPT-4密钥",
+        "zh-TW": "例如：我的GPT-4金鑰",
+        "ko-KR": "예: 내 GPT-4 키",
+        "no": "f.eks., Min GPT-4-nøkkel",
+        "ar": "مثال: مفتاح GPT-4 الخاص بي",
+        "de": "z.B., Mein GPT-4-Schlüssel",
+        "fr": "p.ex., Ma clé GPT-4",
+        "it": "es., La mia chiave GPT-4",
+        "pt": "ex., Minha chave GPT-4",
+        "es": "ej., Mi clave GPT-4",
+        "tr": "örn., GPT-4 Anahtarım"
+    },
+    "SETTINGS$PROVIDER": {
+        "en": "Provider",
+        "uk": "Провайдер",
+        "ja": "プロバイダー",
+        "zh-CN": "提供商",
+        "zh-TW": "提供商",
+        "ko-KR": "제공자",
+        "no": "Leverandør",
+        "ar": "مزود",
+        "de": "Anbieter",
+        "fr": "Fournisseur",
+        "it": "Fornitore",
+        "pt": "Provedor",
+        "es": "Proveedor",
+        "tr": "Sağlayıcı"
+    },
+    "SETTINGS$ADD_API_KEY": {
+        "en": "Add API Key",
+        "uk": "Додати API-ключ",
+        "ja": "APIキーを追加",
+        "zh-CN": "添加API密钥",
+        "zh-TW": "添加API金鑰",
+        "ko-KR": "API 키 추가",
+        "no": "Legg til API-nøkkel",
+        "ar": "إضافة مفتاح API",
+        "de": "API-Schlüssel hinzufügen",
+        "fr": "Ajouter une clé API",
+        "it": "Aggiungi chiave API",
+        "pt": "Adicionar chave API",
+        "es": "Añadir clave API",
+        "tr": "API Anahtarı Ekle"
+    },
+    "SETTINGS$SELECT_PROVIDER": {
+        "en": "Select a provider",
+        "uk": "Виберіть провайдера",
+        "ja": "プロバイダーを選択",
+        "zh-CN": "选择提供商",
+        "zh-TW": "選擇提供商",
+        "ko-KR": "제공자 선택",
+        "no": "Velg en leverandør",
+        "ar": "اختر مزودًا",
+        "de": "Anbieter auswählen",
+        "fr": "Sélectionner un fournisseur",
+        "it": "Seleziona un fornitore",
+        "pt": "Selecionar um provedor",
+        "es": "Seleccionar un proveedor",
+        "tr": "Bir sağlayıcı seçin"
+    },
+    "SETTINGS$MODEL": {
+        "en": "Model",
+        "uk": "Модель",
+        "ja": "モデル",
+        "zh-CN": "模型",
+        "zh-TW": "模型",
+        "ko-KR": "모델",
+        "no": "Modell",
+        "ar": "نموذج",
+        "de": "Modell",
+        "fr": "Modèle",
+        "it": "Modello",
+        "pt": "Modelo",
+        "es": "Modelo",
+        "tr": "Model"
+    },
+    "SETTINGS$API_KEY": {
+        "en": "API Key",
+        "uk": "API-ключ",
+        "ja": "APIキー",
+        "zh-CN": "API密钥",
+        "zh-TW": "API金鑰",
+        "ko-KR": "API 키",
+        "no": "API-nøkkel",
+        "ar": "مفتاح API",
+        "de": "API-Schlüssel",
+        "fr": "Clé API",
+        "it": "Chiave API",
+        "pt": "Chave API",
+        "es": "Clave API",
+        "tr": "API Anahtarı"
+    },
+    "SETTINGS$API_KEY_UPDATE_PLACEHOLDER": {
+        "en": "Leave empty to keep current key",
+        "uk": "Залиште порожнім, щоб зберегти поточний ключ",
+        "ja": "現在のキーを保持するには空のままにしてください",
+        "zh-CN": "留空以保留当前密钥",
+        "zh-TW": "留空以保留當前金鑰",
+        "ko-KR": "현재 키를 유지하려면 비워 두세요",
+        "no": "La stå tom for å beholde nåværende nøkkel",
+        "ar": "اتركه فارغًا للاحتفاظ بالمفتاح الحالي",
+        "de": "Leer lassen, um den aktuellen Schlüssel beizubehalten",
+        "fr": "Laisser vide pour conserver la clé actuelle",
+        "it": "Lascia vuoto per mantenere la chiave corrente",
+        "pt": "Deixe vazio para manter a chave atual",
+        "es": "Dejar vacío para mantener la clave actual",
+        "tr": "Mevcut anahtarı korumak için boş bırakın"
+    },
+    "SETTINGS$API_KEY_UPDATE_HELP": {
+        "en": "Only enter if you want to change the API key",
+        "uk": "Введіть лише якщо хочете змінити API-ключ",
+        "ja": "APIキーを変更する場合のみ入力してください",
+        "zh-CN": "仅在需要更改API密钥时输入",
+        "zh-TW": "僅在需要更改API金鑰時輸入",
+        "ko-KR": "API 키를 변경하려는 경우에만 입력하세요",
+        "no": "Skriv inn kun hvis du vil endre API-nøkkelen",
+        "ar": "أدخل فقط إذا كنت تريد تغيير مفتاح API",
+        "de": "Nur eingeben, wenn Sie den API-Schlüssel ändern möchten",
+        "fr": "Entrez uniquement si vous souhaitez modifier la clé API",
+        "it": "Inserisci solo se vuoi cambiare la chiave API",
+        "pt": "Digite apenas se quiser alterar a chave API",
+        "es": "Ingrese solo si desea cambiar la clave API",
+        "tr": "Yalnızca API anahtarını değiştirmek istiyorsanız girin"
+    },
+    "SETTINGS$BASE_URL_PLACEHOLDER": {
+        "en": "https://api.example.com (optional)",
+        "uk": "https://api.example.com (необов'язково)",
+        "ja": "https://api.example.com (オプション)",
+        "zh-CN": "https://api.example.com (可选)",
+        "zh-TW": "https://api.example.com (可選)",
+        "ko-KR": "https://api.example.com (선택사항)",
+        "no": "https://api.example.com (valgfritt)",
+        "ar": "https://api.example.com (اختياري)",
+        "de": "https://api.example.com (optional)",
+        "fr": "https://api.example.com (optionnel)",
+        "it": "https://api.example.com (opzionale)",
+        "pt": "https://api.example.com (opcional)",
+        "es": "https://api.example.com (opcional)",
+        "tr": "https://api.example.com (isteğe bağlı)"
+    },
+    "SETTINGS$SET_AS_DEFAULT_CONFIGURATION": {
+        "en": "Set as default configuration",
+        "uk": "Встановити як конфігурацію за замовчуванням",
+        "ja": "デフォルト設定として設定",
+        "zh-CN": "设为默认配置",
+        "zh-TW": "設為預設配置",
+        "ko-KR": "기본 구성으로 설정",
+        "no": "Sett som standardkonfigurasjon",
+        "ar": "تعيين كتكوين افتراضي",
+        "de": "Als Standardkonfiguration festlegen",
+        "fr": "Définir comme configuration par défaut",
+        "it": "Imposta come configurazione predefinita",
+        "pt": "Definir como configuração padrão",
+        "es": "Establecer como configuración predeterminada",
+        "tr": "Varsayılan yapılandırma olarak ayarla"
+    },
+    "SETTINGS$TEST_BEFORE_SAVING": {
+        "en": "Test before saving",
+        "uk": "Перевірити перед збереженням",
+        "ja": "保存前にテスト",
+        "zh-CN": "保存前测试",
+        "zh-TW": "儲存前測試",
+        "ko-KR": "저장하기 전에 테스트",
+        "no": "Test før lagring",
+        "ar": "اختبار قبل الحفظ",
+        "de": "Vor dem Speichern testen",
+        "fr": "Tester avant de sauvegarder",
+        "it": "Test prima di salvare",
+        "pt": "Testar antes de salvar",
+        "es": "Probar antes de guardar",
+        "tr": "Kaydetmeden önce test et"
+    },
+    "SETTINGS$TEST_CONFIGURATION": {
+        "en": "Test Configuration",
+        "uk": "Тестова конфігурація",
+        "ja": "設定をテスト",
+        "zh-CN": "测试配置",
+        "zh-TW": "測試配置",
+        "ko-KR": "구성 테스트",
+        "no": "Test konfigurasjon",
+        "ar": "اختبار التكوين",
+        "de": "Konfiguration testen",
+        "fr": "Tester la configuration",
+        "it": "Test configurazione",
+        "pt": "Testar configuração",
+        "es": "Probar configuración",
+        "tr": "Yapılandırmayı Test Et"
+    },
+    "SETTINGS$NO_CHANGES": {
+        "en": "No changes to save",
+        "uk": "Немає змін для збереження",
+        "ja": "保存する変更はありません",
+        "zh-CN": "没有要保存的更改",
+        "zh-TW": "沒有要儲存的變更",
+        "ko-KR": "저장할 변경 사항이 없습니다",
+        "no": "Ingen endringer å lagre",
+        "ar": "لا توجد تغييرات للحفظ",
+        "de": "Keine Änderungen zum Speichern",
+        "fr": "Aucun changement à sauvegarder",
+        "it": "Nessuna modifica da salvare",
+        "pt": "Sem alterações para salvar",
+        "es": "Sin cambios para guardar",
+        "tr": "Kaydedilecek değişiklik yok"
+    },
+    "SETTINGS$LAST_TEST_STATUS": {
+        "en": "Last test status",
+        "uk": "Статус останнього тесту",
+        "ja": "最後のテストステータス",
+        "zh-CN": "上次测试状态",
+        "zh-TW": "上次測試狀態",
+        "ko-KR": "마지막 테스트 상태",
+        "no": "Siste teststatus",
+        "ar": "حالة آخر اختبار",
+        "de": "Letzter Teststatus",
+        "fr": "Statut du dernier test",
+        "it": "Stato ultimo test",
+        "pt": "Status do último teste",
+        "es": "Estado de la última prueba",
+        "tr": "Son test durumu"
+    },
+    "SETTINGS$SET_AS_DEFAULT": {
+        "en": "Set as Default",
+        "uk": "Встановити за замовчуванням",
+        "ja": "デフォルトに設定",
+        "zh-CN": "设为默认",
+        "zh-TW": "設為預設",
+        "ko-KR": "기본값으로 설정",
+        "no": "Sett som standard",
+        "ar": "تعيين كافتراضي",
+        "de": "Als Standard festlegen",
+        "fr": "Définir par défaut",
+        "it": "Imposta come predefinito",
+        "pt": "Definir como padrão",
+        "es": "Establecer como predeterminado",
+        "tr": "Varsayılan Olarak Ayarla"
+    },
+    "SETTINGS$NOT_TESTED": {
+        "en": "Not tested",
+        "uk": "Не перевірено",
+        "ja": "未テスト",
+        "zh-CN": "未测试",
+        "zh-TW": "未測試",
+        "ko-KR": "테스트되지 않음",
+        "no": "Ikke testet",
+        "ar": "لم يتم اختباره",
+        "de": "Nicht getestet",
+        "fr": "Non testé",
+        "it": "Non testato",
+        "pt": "Não testado",
+        "es": "No probado",
+        "tr": "Test edilmedi"
+    },
+    "SETTINGS$LAST_USED": {
+        "en": "Last used",
+        "uk": "Востаннє використано",
+        "ja": "最後に使用",
+        "zh-CN": "上次使用",
+        "zh-TW": "上次使用",
+        "ko-KR": "마지막 사용",
+        "no": "Sist brukt",
+        "ar": "آخر استخدام",
+        "de": "Zuletzt verwendet",
+        "fr": "Dernière utilisation",
+        "it": "Ultimo utilizzo",
+        "pt": "Último uso",
+        "es": "Último uso",
+        "tr": "Son kullanım"
+    },
+    "SETTINGS$NO_API_KEYS": {
+        "en": "No API keys configured",
+        "uk": "Жодного API-ключа не налаштовано",
+        "ja": "APIキーが設定されていません",
+        "zh-CN": "未配置API密钥",
+        "zh-TW": "未配置API金鑰",
+        "ko-KR": "구성된 API 키가 없습니다",
+        "no": "Ingen API-nøkler konfigurert",
+        "ar": "لم يتم تكوين مفاتيح API",
+        "de": "Keine API-Schlüssel konfiguriert",
+        "fr": "Aucune clé API configurée",
+        "it": "Nessuna chiave API configurata",
+        "pt": "Nenhuma chave API configurada",
+        "es": "No hay claves API configuradas",
+        "tr": "Yapılandırılmış API anahtarı yok"
+    },
+    "SETTINGS$DELETE_API_KEY": {
+        "en": "Delete API Key",
+        "uk": "Видалити API-ключ",
+        "ja": "APIキーを削除",
+        "zh-CN": "删除API密钥",
+        "zh-TW": "刪除API金鑰",
+        "ko-KR": "API 키 삭제",
+        "no": "Slett API-nøkkel",
+        "ar": "حذف مفتاح API",
+        "de": "API-Schlüssel löschen",
+        "fr": "Supprimer la clé API",
+        "it": "Elimina chiave API",
+        "pt": "Excluir chave API",
+        "es": "Eliminar clave API",
+        "tr": "API Anahtarını Sil"
+    },
+    "SETTINGS$DELETE_API_KEY_CONFIRMATION": {
+        "en": "Are you sure you want to delete this API key configuration?",
+        "uk": "Ви впевнені, що хочете видалити цю конфігурацію API-ключа?",
+        "ja": "このAPIキー設定を削除してもよろしいですか？",
+        "zh-CN": "您确定要删除此API密钥配置吗？",
+        "zh-TW": "您確定要刪除此API金鑰配置嗎？",
+        "ko-KR": "이 API 키 구성을 삭제하시겠습니까?",
+        "no": "Er du sikker på at du vil slette denne API-nøkkelkonfigurasjonen?",
+        "ar": "هل أنت متأكد من أنك تريد حذف تكوين مفتاح API هذا؟",
+        "de": "Sind Sie sicher, dass Sie diese API-Schlüsselkonfiguration löschen möchten?",
+        "fr": "Êtes-vous sûr de vouloir supprimer cette configuration de clé API ?",
+        "it": "Sei sicuro di voler eliminare questa configurazione della chiave API?",
+        "pt": "Tem certeza de que deseja excluir esta configuração de chave API?",
+        "es": "¿Está seguro de que desea eliminar esta configuración de clave API?",
+        "tr": "Bu API anahtarı yapılandırmasını silmek istediğinizden emin misiniz?"
+    },
     "BUTTON$CREATE": {
         "en": "Create",
         "uk": "Створити",
