feat: add theme settings and integrate tw-animate-css - Introduced theme settings options (auto, light, dark) in i18n and settings. - Added tw-animate-css for enhanced animations in the frontend. - Removed unused tailwind.config.js file. - Updated index.css to include new theme variables and animations.

--- a/frontend/src/i18n/translation.json
+++ b/frontend/src/i18n/translation.json
@@ -2431,6 +2431,70 @@
         "tr": "Ses Bildirimleri",
         "uk": "Звукові сповіщення"
     },
+    "SETTINGS$THEME": {
+        "en": "Theme",
+        "ja": "テーマ",
+        "zh-CN": "主题",
+        "zh-TW": "主題",
+        "ko-KR": "테마",
+        "de": "Thema",
+        "no": "Tema",
+        "it": "Tema",
+        "pt": "Tema",
+        "es": "Tema",
+        "ar": "المظهر",
+        "fr": "Thème",
+        "tr": "Tema",
+        "uk": "Тема"
+    },
+    "SETTINGS$THEME_AUTO": {
+        "en": "Auto (System)",
+        "ja": "自動 (システム)",
+        "zh-CN": "自动 (系统)",
+        "zh-TW": "自動 (系統)",
+        "ko-KR": "자동 (시스템)",
+        "de": "Automatisch (System)",
+        "no": "Automatisk (System)",
+        "it": "Automatico (Sistema)",
+        "pt": "Automático (Sistema)",
+        "es": "Automático (Sistema)",
+        "ar": "تلقائي (النظام)",
+        "fr": "Automatique (Système)",
+        "tr": "Otomatik (Sistem)",
+        "uk": "Автоматично (Система)"
+    },
+    "SETTINGS$THEME_LIGHT": {
+        "en": "Light",
+        "ja": "ライト",
+        "zh-CN": "浅色",
+        "zh-TW": "淺色",
+        "ko-KR": "라이트",
+        "de": "Hell",
+        "no": "Lys",
+        "it": "Chiaro",
+        "pt": "Claro",
+        "es": "Claro",
+        "ar": "فاتح",
+        "fr": "Clair",
+        "tr": "Açık",
+        "uk": "Світла"
+    },
+    "SETTINGS$THEME_DARK": {
+        "en": "Dark",
+        "ja": "ダーク",
+        "zh-CN": "深色",
+        "zh-TW": "深色",
+        "ko-KR": "다크",
+        "de": "Dunkel",
+        "no": "Mørk",
+        "it": "Scuro",
+        "pt": "Escuro",
+        "es": "Oscuro",
+        "ar": "داكن",
+        "fr": "Sombre",
+        "tr": "Koyu",
+        "uk": "Темна"
+    },
     "SETTINGS$MAX_BUDGET_PER_TASK": {
         "en": "Maximum Budget Per Task",
         "ja": "タスクごとの最大予算",
