feat: enhance frontend with new dependencies and UI improvements - Added @fontsource-variable/dancing-script and updated uuid and @types/uuid dependencies for better font and UUID handling. - Integrated dancing-script font into index.css for improved typography. - Introduced message queue handling in ChatInterface to manage message sending during WebSocket connection. - Updated routes to include a new debug-tailwind route for easier debugging. - Refactored chat message styles for better visual consistency. - Enhanced sidebar and home header components for improved user experience and responsiveness. - Cleaned up imports and improved overall component structure for maintainability.

--- a/frontend/src/i18n/translation.json
+++ b/frontend/src/i18n/translation.json
@@ -1232,20 +1232,20 @@
         "uk": "Щоб розпочати роботу з запропонованими завданнями, підключіть свій обліковий запис GitHub, GitLab або Bitbucket."
     },
     "HOME$LETS_START_BUILDING": {
-        "en": "Let’s build magic.",
-        "ja": "魔法を生み出しましょう。",
-        "zh-CN": "让我们创造魔法。",
-        "zh-TW": "讓我們創造魔法。",
-        "ko-KR": "마법을 만들어 봅시다.",
-        "no": "La oss skape magi.",
-        "it": "Creiamo magia.",
-        "pt": "Vamos criar mágica.",
-        "es": "Hagamos magia.",
-        "ar": "لنصنع السحر.",
-        "fr": "Créons de la magie.",
-        "tr": "Haydi sihir yaratalım.",
-        "de": "Lasst uns Magie erschaffen.",
-        "uk": "Давайте творити магію."
+        "en": "Let’s build",
+        "ja": "一緒に作りましょう",
+        "zh-CN": "让我们一起构建",
+        "zh-TW": "讓我們一起構建",
+        "ko-KR": "함께 만들어 봅시다",
+        "no": "La oss bygge",
+        "it": "Costruiamo insieme",
+        "pt": "Vamos construir",
+        "es": "Construyamos juntos",
+        "ar": "لنبدأ البناء",
+        "fr": "Construisons",
+        "tr": "Haydi inşa edelim",
+        "de": "Lasst uns bauen",
+        "uk": "Давайте будувати"
     },
     "HOME$OPENHANDS_DESCRIPTION": {
         "en": "OpenHands makes it easy to build and maintain software using AI-driven development.",
@@ -4736,20 +4736,20 @@
         "uk": "Агента призупинено."
     },
     "LANDING$TITLE": {
-        "en": "Let’s build magic.",
-        "ja": "開発を始めましょう！",
-        "zh-CN": "让我们开始构建！",
-        "zh-TW": "讓我們開始建構！",
-        "ko-KR": "시작해봅시다!",
-        "fr": "Commençons à construire !",
-        "es": "¡Empecemos a construir!",
-        "de": "Lass uns anfangen zu bauen!",
-        "it": "Iniziamo a costruire!",
-        "pt": "Vamos começar a construir!",
-        "ar": "هيا نبدأ البناء!",
-        "no": "La oss begynne å bygge!",
-        "tr": "Hadi inşa etmeye başlayalım!",
-        "uk": "Почнімо будувати!"
+        "en": "Let’s build",
+        "ja": "一緒に作りましょう",
+        "zh-CN": "让我们一起构建",
+        "zh-TW": "讓我們一起構建",
+        "ko-KR": "함께 만들어 봅시다",
+        "fr": "Construisons",
+        "es": "Construyamos juntos",
+        "de": "Lasst uns bauen",
+        "it": "Costruiamo insieme",
+        "pt": "Vamos construir",
+        "ar": "لنبدأ البناء",
+        "no": "La oss bygge",
+        "tr": "Haydi inşa edelim",
+        "uk": "Давайте будувати"
     },
     "LANDING$SUBTITLE": {
         "en": "OpenHands makes it easy to build and maintain software using a simple prompt.",
